--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>I ❤️ Coding as much as i love moon and stars.You can call me "ASTROPHILE"</p>
     
     <a href="#aboutus">aboutus</a>   
-    <a target="_blank" href="index.html">Astrobot x Nikhilesh Rana</a>
+    <a target="_blank" href="index2.html">Astrobot x Nikhilesh Rana</a>
     
 
     <br><br><br><br><br>
