--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
     </table>
 
     <h2><b>INTERNSHIP</b></h2>
-    <p><b>Google and Microsoft</b> as junior developer.</p>
+    <p><b>blah blha blah blah balh</p>
     <p><b>Web developer</b></p>
     <ul>
-        <li>Excellent in C++</li>
-        <li>Excellect in RDBMS</li>
-        <li>Excellent in CSS</li>
+        <li>C++</li>
+        <li>RDBMS</li>
+        <li>lorem*20</li>
     </ul>
 
     <h2>PROJECTS</h2>
